--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.tencent.mobilenetssdncnn"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.tencent.mobilenetssdncnn"
       android:versionCode="1"
       android:versionName="1.1">
-    <application android:label="@string/app_name" >
-        <activity android:name="MainActivity"
-                  android:label="@string/app_name">
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <application
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        tools:ignore="ExtraText"
+        android:theme="@style/Theme.MyCamera">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
