--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
+        maven {
+            url "https://maven.aliyun.com/nexus/content/groups/public/"
+        }
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:7.0.1'
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
         google()
+        mavenCentral()
+        jcenter() // Warning: this repository is going to shut down soon
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
